added test performance mode